--- a/front-css/plantillas-de-codigo/plantillas-de-codigo.css
+++ b/front-css/plantillas-de-codigo/plantillas-de-codigo.css
@@ -33,43 +33,10 @@ h2 {
     margin-top: 4em;
     margin-left: 2em;
 }
-pre {
-/*    position: absolute;*/
+div > pre {
+    position: absolute;
     left: 8em;
     background-color: var(--n-color);
     min-width: calc(100% - 16em);
     border-radius: 1em;
 }
-/*
-    xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
-*/
-/*div {
-  content: "";
-  clear: both;
-  display: table;
-}
-div > pre {
-  content: "";
-  clear: both;
-  display: table;
-}
-div > pre > code {
-  content: "";
-  clear: both;
-  display: table;
-}
-div::after {
-  content: "";
-  clear: both;
-  display: table;
-}
-div > pre::after {
-  content: "";
-  clear: both;
-  display: table;
-}
-div > pre > code::after {
-  content: "";
-  clear: both;
-  display: table;
-}*/
