--- a/front-css/red-social/main.css
+++ b/front-css/red-social/main.css
@@ -3,37 +3,33 @@
     Created on : 20 dic. 2020, 20:26:41
     Author     : desarrollador
 */
-main > p {
+.n-grid > .area-2 > main > p {
     color: var(--n-color-dos);
     font-family: var(--n-fuente);
 }
-/* Style the tab */
-.tab {
+.main-nav {
+    background-color: var(--n-color-dos);
+    border-radius: 2em;
     overflow: hidden;
-    border: 1px solid #ccc;
-    background-color: #f1f1f1;
 }
-
-/* Style the buttons inside the tab */
-.tab button {
+.main-nav > button {
+    color: var(--n-color);
     background-color: inherit;
     float: left;
     border: none;
     outline: none;
     cursor: pointer;
     padding: 14px 16px;
-    transition: 0.3s;
     font-size: 17px;
 }
-
-/* Change background color of buttons on hover */
-.tab button:hover {
-    background-color: #ddd;
+.main-nav > button:hover {
+    background-color: var(--n-color-tres);
+    border-radius: 2em;
 }
-
-/* Create an active/current tablink class */
-.tab button.active {
-    background-color: #ccc;
+.main-nav > button.activo {
+    color: var(--n-color-dos);
+    background-color: var(--n-color);
+    border-radius: 2em;
 }
 
 /* Style the tab content */
@@ -45,9 +41,9 @@ main > p {
 }
 /* Style the close button */
 .topright {
-  float: right;
-  cursor: pointer;
-  font-size: 28px;
+    float: right;
+    cursor: pointer;
+    font-size: 28px;
 }
 
 .topright:hover {color: red;}
@@ -60,4 +56,68 @@ main > p {
 @keyframes fadeEffect {
     from {opacity: 0;}
     to {opacity: 1;}
+}
+.n-grid > .area-2 > main > div > form {
+    margin-top: 4em;
+}
+#form-articulo > .etiqueta {
+    color: var(--n-color-dos);
+    font-family: var(--n-fuente-dos);
+    font-size: 0.80em;
+    font-weight: bold;
+}
+.n-grid > .area-2 > main > div > #form-articulo > #titulo, .n-grid > .area-2 > main > div > #form-articulo > #articulo {
+    color: var(--n-color-dos);
+    font-family: var(--n-fuente-dos);
+    font-size: 0.80em;
+    width: 100%;
+    margin-bottom: 0.50em;
+    border: none;
+    border-radius: 0.50em;
+    padding: 0.625em;
+}
+.n-grid > .area-2 > main > div > #form-articulo > #titulo:focus, .n-grid > .area-2 > main > div > #form-articulo > #articulo:focus {
+    color: var(--n-color);
+    background-color: var(--n-color-tres);
+    outline: none;
+}
+.n-grid > .area-2 > main > div > #form-articulo > #articulo {
+    resize: none;
+}
+.n-grid > .area-2 > main > div > form > .cargar-archivo {
+    color: var(--n-color);
+    background-color: var(--n-color-verde);
+    font-family: var(--n-fuente);
+    font-size: 0.80em;
+    border: 0.10em solid var(--n-color-dos);
+    border-radius: 0.50em;
+    padding: 0.50em;
+    cursor: pointer;
+}
+.n-grid > .area-2 > main > div > form > input:disabled {
+    color: var(--n-color-dos);
+    background-color: var(--n-color);
+    font-family: var(--n-fuente-dos);
+    font-size: 0.80em;
+    border: none;
+    border: 0.10em solid var(--n-color-dos);
+    border-radius: 0.50em;
+    padding: 0.50em;
+    cursor: not-allowed;
+}
+.n-grid > .area-2 > main > div > form > #subir, .n-grid > .area-2 > main > div > form > #subir-archivo {
+    color: var(--n-color);
+    background-color: var(--n-color-dos);
+    font-family: var(--n-fuente);
+    font-size: 0.90em;
+    width: 100%;
+    margin-top: 0.20em;
+    border: none;
+    border-radius: 0.50em;
+    padding: 0.50em;
+}
+.n-grid > .area-2 > main > div > form >  #subir:hover, .n-grid > .area-2 > main > div > form > #subir-archivo:hover {
+    color: var(--n-color-dos);
+    background-color: var(--n-color-tres);
+    text-shadow: var(--n-sombra-de-texto);
 }
