--- a/front-css/red-social/article.css
+++ b/front-css/red-social/article.css
@@ -4,6 +4,77 @@
     Author     : desarrollador
 */
 article {
-    margin: 2em 0em 0em 0em;
-    /*padding: 2em 0em 0em 0em;*/
+    margin: 3em 0em 0em 0em;
+}
+.articulo-head {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+h2 {
+    color: var(--n-color-dos);
+    font-family: var(--n-fuente-dos);
+    font-size: 0.90em;
+    font-weight: bold;
+    margin: -0.20em 0em 0em 0em;
+}
+.n-grid > .area-2 > article > section > .articulo-head > section > img.portada {
+    position: relative;
+    width: 7em;
+    height: 4em;
+    border: 0.10em solid var(--n-color);
+    border-radius: 0.50em;
+}
+.n-grid > .area-2 > article > section > .articulo-head > section > img.foto {
+    position: relative;
+    left: -7.20em;
+    bottom: -0.50em;
+    z-index: 1;
+    width: 3em;
+    height: 3em;
+    border: 0.10em solid var(--n-color);
+    border-radius: 50%;
+}
+.n-grid > .area-2 > article > section > .articulo-head > section > span {
+    color: var(--n-color-dos);
+    font-size: 0.70em;
+}
+.n-grid > .area-2 > article > section > .articulo-head > section > button {
+    color: var(--n-color-dos);
+    background-color: var(--n-color);
+    font-size: 0.90em;
+    border: none;
+}
+.n-grid > .area-2 > article > section > .articulo-body {
+    margin: 0em 0em 1em 0em;
+}
+.n-grid > .area-2 > article > section > .articulo-body > h3 {
+    color: var(--n-color-dos);
+    font-family: var(--n-fuente-dos);
+    font-size: 0.90em;
+    font-weight: bold;
+}
+.n-grid > .area-2 > article > section > .articulo-body > p {
+    color: var(--n-color-dos);
+    font-family: var(--n-fuente-dos);
+    font-size: 0.90em;
+}
+.n-grid > .area-2 > article > section > .articulo-body > img {
+    /*margin: 0em 0em 1em 0em;*/
+}
+.n-grid > .area-2 > article > section > .articulo-footer {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;  
+}
+.n-grid > .area-2 > article > section > .articulo-footer  > section > button {
+    color: var(--n-color-dos);
+    background-color: var(--n-color);
+    font-size: 1.30em;
+    border: none;
+}
+.n-grid > .area-2 > article > section > .articulo-footer  > section > span {
+    color: var(--n-color-dos);
+    font-size: 0.90em;
+    margin: 0em 0.70em 0em 0em;
 }
