--- a/front-css/red-social/article.css
+++ b/front-css/red-social/article.css
@@ -3,20 +3,13 @@
     Created on : 24 dic. 2020, 13:55:10
     Author     : desarrollador
 */
-article {
-    margin: 3em 0em 0em 0em;
+.n-grid > .area-2 > article {
+    margin: 3em 6em 0em 6em;
 }
-.articulo-head {
+.n-grid > .area-2 > article > section > .articulo-head {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-}
-h2 {
-    color: var(--n-color-dos);
-    font-family: var(--n-fuente-dos);
-    font-size: 0.90em;
-    font-weight: bold;
-    margin: -0.20em 0em 0em 0em;
 }
 .n-grid > .area-2 > article > section > .articulo-head > section > img.portada {
     position: relative;
@@ -35,8 +28,16 @@ h2 {
     border: 0.10em solid var(--n-color);
     border-radius: 50%;
 }
+.n-grid > .area-2 > article > section > .articulo-head > section > h2 {
+    color: var(--n-color-dos);
+    font-family: var(--n-fuente-dos);
+    font-size: 0.90em;
+    font-weight: bold;
+    margin: -0.20em 0em 0em 0em;
+}
 .n-grid > .area-2 > article > section > .articulo-head > section > span {
     color: var(--n-color-dos);
+    font-family: var(--n-fuente-dos);
     font-size: 0.70em;
 }
 .n-grid > .area-2 > article > section > .articulo-head > section > button {
