--- a/front-css/red-social/main.css
+++ b/front-css/red-social/main.css
@@ -3,6 +3,9 @@
     Created on : 20 dic. 2020, 20:26:41
     Author     : desarrollador
 */
+.n-grid > .area-2 > main {
+    margin: 0em 6em 0em 6em;
+}
 .n-grid > .area-2 > main > p {
     color: var(--n-color-dos);
     font-family: var(--n-fuente);
