--- a/front-css/red-social/nav.css
+++ b/front-css/red-social/nav.css
@@ -16,7 +16,7 @@
     left: 2em;
     width: calc(100% - 4em);
 }
-.n-grid > section { border: 0.10em solid var(--n-color-dos); } 
+/*.n-grid > section { border: 0.10em solid var(--n-color-dos); }*/ 
 .n-grid > .area-1 { grid-area: 1 / 1 / span 1 / span 1; }
 .n-grid > .area-2 { grid-area: 1 / 2 / span 1 / span 1; }
 .n-grid > .area-3 { grid-area: 1 / 3 / span 1 / span 1; }
@@ -37,10 +37,6 @@
 .n-grid > .area-1 > nav > .principal > a > i {
     min-width: 1.50em;
 }
-
-
-
-
 .n-grid > .area-1 > nav > .segundario > ul {
     padding: 0;
     list-style: none;
@@ -50,7 +46,7 @@
     font-family: var(--n-fuente-dos);
     font-size: 0.70em;
 }
-.n-grid > .area-1 > nav > .segundario > ul > li+li:before {
+.n-grid > .area-1 > nav > .segundario > ul > li + li:before {
     padding: 0.20em;
     color: var(--n-color-dos);
     content: "/\00a0";
