--- a/front-css/red-social/perfil/perfil.css
+++ b/front-css/red-social/perfil/perfil.css
@@ -9,9 +9,8 @@
 .n-grid {
     display: grid;
     grid-template-columns: 50% 50%;
-    grid-auto-rows: 20em 3em auto;
+    grid-auto-rows: 20em 5em auto;
     /*grid-gap: 0.10em;*/  
-    
     position: absolute;
     top: 6em;
     left: 2em;
@@ -43,7 +42,7 @@
     height: 8em;
     border-radius: 50% 50% 50% 1em;
 }
-.n-grid > .area-1 > main > .contenedor > h2 {
+/*.n-grid > .area-1 > main > .contenedor > h2 {
     position: relative;
     top: 5.80em;
     z-index: 0;
@@ -51,4 +50,54 @@
     background-color: var(--n-color-uno-uno);
     font-family: var(--n-fuente-tres);
     font-size: 1.10em;
+}*/
+/*.n-grid > .area-1 > main > .contenedor > .perfil-nav {
+    position: relative;
+    top: 4.20em;
+    left: 26em;
+}*/
+.n-grid > .area-1 > main > .contenedor > .perfil-nav {
+    position: relative;
+    top: 4.70em;
+    /*left: -8em;*/
+    z-index: 1;
+}
+.n-grid > .area-1 > main > .contenedor > .perfil-nav > button {
+    color: var(--n-color-dos);
+    background-color: var(--n-color-uno-uno);
+    font-size: 1.10em;
+    border: none;
+    padding: 1em;
+    border-radius: 50% 50% 50% 0.20em;
+}
+/*
+    Cuadricula 2
+*/
+.n-grid > .area-4 {
+    display: grid;
+    grid-template-columns: 50% 50%;
+    grid-auto-rows: 8em auto;
+}
+.n-grid > .area-4 > .sesion-1 { grid-area: 1 / 1 / span 1 / span 2; }
+.n-grid > .area-4 > .sesion-2 { grid-area: 1 / 2 / span 1 / span 1; }
+.n-grid > .area-4 > .sesion-3 { grid-area: 2 / 2 / span 1 / span 1; }
+.n-grid > .area-4 > section > h2 {
+    color: var(--n-color-dos);
+    font-family: var(--n-fuente-tres);
+    font-size: 1.10em;
+}
+.n-grid > .area-4 > .sesion-1 > :nth-child(3) {
+    color: var(--n-color-verde);
+    font-style: italic;
+    text-decoration: underline;
+}
+.n-grid > .area-4 > section > h4 {
+    color: var(--n-color-dos);
+    font-family: var(--n-fuente-dos);
+    font-size: 0.80em;
+}
+.n-grid > .area-4 > section > p {
+    color: var(--n-color-dos);
+    font-family: var(--n-fuente-dos);
+    font-size: 0.80em;
 }
