--- a/front-css/red-social/header.css
+++ b/front-css/red-social/header.css
@@ -97,6 +97,7 @@ header > .area-2 > form  > input {
     height: 3em;
     border: 0.10em solid var(--n-color);
     border-radius: 50%;
+    cursor: pointer;
 }
 /*header, #n-header-span, #n-icono-mediano, #n-header-mediano, .n-header-minimo { transition: top 0.3s ease-in-out; }*/
 @media screen and (min-width: 902px) {
@@ -372,8 +373,27 @@ header > .area-2 > form  > input {
     }
 }
 
+/*
+    header-nav
+*/
+.n-header-nav-contenedor {
+    display: none;
+    position: absolute;
+    top: 3em;
+    right: 0;
+    background-color: var(--n-color-dos);
+    min-width: 160px;
+    border-radius: 0.50em;
+    box-shadow: 0px 8px 16px 0px var(--n-color-dos-uno);
+    z-index: 2;
+}
 
-
-
-
-
+.n-header-nav-contenedor > a {
+    color: var(--n-color);
+    font-family: var(--n-fuente-dos);
+    font-size: 0.90em;
+    padding: 0.75em 1em;
+    text-decoration: none;
+    display: block;
+}
+.n-display { display: block; }
