--- a/front-css/red-social/nav.css
+++ b/front-css/red-social/nav.css
@@ -34,6 +34,7 @@
     font-size: 0.90em;
     margin-bottom: 0.50em;
 }
+.n-grid > .area-1 > nav > .principal > a:hover { color: var(--n-color-dos-uno); }
 .n-grid > .area-1 > nav > .principal > a > i {
     min-width: 1.50em;
 }
