--- a/front-css/red-social/perfil/perfil.css
+++ b/front-css/red-social/perfil/perfil.css
@@ -63,7 +63,7 @@
     z-index: 1;
 }
 .n-grid > .area-1 > main > .contenedor > .perfil-nav > form > button[type="submit"] {
-/*.n-grid > .area-1 > main > .contenedor > .perfil-nav > form > label {*/
+    float: left;
     color: var(--n-color-dos);
     background-color: var(--n-color-uno-uno);
     font-size: 1.10em;
@@ -72,14 +72,6 @@
     border-radius: 50% 50% 50% 0.20em;
     cursor: pointer;
 }
-/*.n-grid > .area-1 > main > .contenedor > .perfil-nav > button {
-    color: var(--n-color-dos);
-    background-color: var(--n-color-uno-uno);
-    font-size: 1.10em;
-    border: none;
-    padding: 1em;
-    border-radius: 50% 50% 50% 0.20em;
-}*/
 /*
     Cuadricula 2
 */
