--- a/front-css/red-social/perfil/chats.css
+++ b/front-css/red-social/perfil/chats.css
@@ -3,6 +3,21 @@
     Created on : 20 abr. 2021, 14:39:58
     Author     : desarrollador
 */
+.n-grid {
+    display: grid;
+    grid-template-columns: 20em auto 20em;
+    grid-gap: 0.10em;  
+    
+    position: absolute;
+    top: 6em;
+    left: 2em;
+    width: calc(100% - 4em);
+}
+.n-grid > section { border: 0.10em solid var(--n-color-dos); } 
+.n-grid > .area-1 { grid-area: 1 / 1 / span 2 / span 1; }
+.n-grid > .area-2 { grid-area: 1 / 2 / span 1 / span 1; }
+.n-grid > .area-3 { grid-area: 2 / 2 / span 1 / span 1; }
+.n-grid > .area-3 { display: none; }
 /*
     * mensajes
 */
