--- a/i_css/index.css
+++ b/i_css/index.css
@@ -10,26 +10,23 @@
     display: grid;
     grid-template-columns: auto auto auto;
     grid-gap: 10px;
-    background-color: #2196F3;
+    /*background-color: #2196F3;*/
     padding: 10px;
 }
 .n-grid > section {
-    background-color: var(--n-color);
+    /*background-color: var(--n-color);*/
     /*text-align: center;*/
     padding: 2em;
     /*font-size: 30px;*/
 }
 .area-1 { grid-area: 1 / span 3 / 2 / 4; }
-.area-2 { grid-area: 2 / 1 / 3 / 2; }
-.area-3 { grid-area: 2 / 2 / 3 / span 2; }
+.area-2 { grid-area: 2 / span 3 / 3 / 4; }
+.area-3 { grid-area: 3 / 1 / 4 / 2; }
+.area-4 { grid-area: 3 / 2 / 4 / span 2; }
 /*
     ........................
 */
-h1, h2 {
-    text-shadow: -1px 0 #1c1d22, 0 1px #1c1d22, 1px 0 #1c1d22, 0 -1px #1c1d22;
-}
 h1, h2, h3, h4 {
-    color: var(--n-color-dos);
     font-family: var(--n-fuente);
 }
 *:not(h1), *:not(h2), *:not(h3), *:not(h4) {
@@ -40,4 +37,63 @@ h1, h2, h3, h4 {
 }
 .n-grid > .area-1 > main  > article > h4, .n-grid > .area-1 > main  > article > p {
     /*padding: 0em 0em 0em 2em;*/ 
+}
+/*
+    Header
+*/
+.n-grid > .area-1 > header > :nth-child(1), 
+.n-grid > .area-1 > header > :nth-child(2), 
+.n-grid > .area-1 > header > :nth-child(3), 
+.n-grid > .area-1 > header > :nth-child(4) {
+    margin: 0;
+}
+.n-grid > .area-1 > header > :nth-child(1) {
+    color: var(--n-color);
+    font-family: var(--n-fuente-tres);
+    font-size: 1.50em;
+    text-shadow: -1px 0 #373538, 0 1px #373538, 1px 0 #373538, 0 -1px #373538;
+    opacity: 0.5;
+}
+.n-grid > .area-1 > header > :nth-child(2) {
+    color: var(--n-color-dos-uno);
+    font-size: 3em;
+}
+.n-grid > .area-1 > header > :nth-child(3) {
+    color: var(--n-color-tres-uno);
+    font-size: 2.10em;
+}
+.n-grid > .area-1 > header > :nth-child(4) {
+    color: var(--n-color-dos-uno);
+    font-size: 1.10em;
+}
+/*
+    Main
+*/
+.n-grid > .area-2 > main > h3, 
+.n-grid > .area-2 > main > h4, 
+.n-grid > .area-2 > main > p {
+    margin: 0;
+}
+/*
+    Article
+*/
+.n-grid > .area-3 > article {
+    margin-bottom: 1em;
+}
+.n-grid > .area-3 > article > :nth-child(1), 
+.n-grid > .area-3 > article > :nth-child(2), 
+.n-grid > .area-3 > article > :nth-child(3) {
+    margin: 0;
+}
+.n-grid > .area-3 > article > :nth-child(1) {
+    line-height: 130%;
+}
+.n-grid > .area-3 > article > :nth-child(2) {
+    color: var(--n-color-tres-uno);
+    font-size: 0.50em;
+    line-height: 130%;
+}
+.n-grid > .area-3 > article > :nth-child(3) {
+    color: var(--n-color-tres);
+    font-size: 0.70em;
 }
