--- a/i_css/root.css
+++ b/i_css/root.css
@@ -10,7 +10,7 @@ a, button { cursor: pointer; }
     scroll-behavior: smooth;
 }*/
 :root {
-    --n-fuente:                 'Arial Black', Gadget, sans-serif;
+    --n-fuente:                 'Arial Black', sans-serif;/*'Arial', Gadget, sans-serif*/
     --n-fuente-dos:             'Gadget', sans-serif;/*'Arial', Helvetica, sans-serif*/
     --n-fuente-tres:            'Comic Sans MS', Comic Sans, cursive;
     
@@ -21,13 +21,20 @@ a, button { cursor: pointer; }
     --n-color-tres:             #373538;/*rgb(55, 53, 56), hsl(280, 3%, 21%)*/
     --n-color-tres-uno:         rgba(55, 53, 56, 0.5);
     --n-color-verde:            #457725;/*rgba(69, 119, 37, 0.5) hsl(97, 53%, 31%)*/
+    --n-color-verde-uno:        rgba(69, 119, 37, 0.5);
     --n-color-rojo:             #901E1D;/*rgb(144, 30, 29), hsl(1, 66%, 34%)*/
+    --n-color-rojo-uno:         rgb(144, 30, 29, 0.5);
     
-    --n-transicion:             all 0.8s ease-in-out;/*Interior...............................................................*/
+    --n-transicion:             all 0.8s ease-in-out;/*Admin...............................................................*/
+    
+    --n-tamaño-de-texto:        0.90em;
+    --n-radio:                  0.50em;
+    --n-relleno:                0.50em;
     
     --n-sombra-de-texto:        -1px 0 white, 0 1px white, 1px 0 white, 0 -1px white;
     --n-sombra-de-texto-dos:    -1px 0 #1c1d22, 0 1px #1c1d22, 1px 0 #1c1d22, 0 -1px #1c1d22;
     --n-sombra-de-texto-tres:   -1px 0 #373538, 0 1px #373538, 1px 0 #373538, 0 -1px #373538;
+    --n-sombra-de-texto-verde:  -1px 0 #457725, 0 1px #457725, 1px 0 #457725, 0 -1px #457725;
     --n-sombra-de-texto-roja:   -1px 0 #901E1D, 0 1px #901E1D, 1px 0 #901E1D, 0 -1px #901E1D;
     
     --n-sombra:                 0 0 20px white, 0 0 30px white;
