--- a/i_css/index.css
+++ b/i_css/index.css
@@ -75,15 +75,6 @@ h1, h2, h3, h4 {
     right: -12em;
     background-repeat: no-repeat;
 }
-/*.n-svg-footer {
-    position: absolute!important;
-    left: o;
-    right: 0;
-    bottom: 0;
-    background-repeat: no-repeat;
-    width: 100%;
-    clip-path: polygon(0 16%, 100% 59%, 100% 100%, 0% 100%);
-}*/
 .n-grid > .area-2 > main {
     width: 500px;
     /*background-color: var(--n-color-dos);*/
@@ -124,6 +115,9 @@ h1, h2, h3, h4 {
 /*
     Article
 */
+.n-grid > .area-3 {
+    margin-top: 4em;
+}
 .n-grid > .area-3 > h3 {
     color: var(--n-color);
     margin-bottom: 1.50em;
@@ -131,10 +125,8 @@ h1, h2, h3, h4 {
 }
 .n-grid > .area-3 > .svg-desarrollos {
     float: left;
-/*    background-color: var(--n-color);
-    width: 40%;
-    height: 200px;*/
-    /*margin: 1em;*/
+    width: 170px;
+    height: 170px;
     shape-outside: circle(50% at 50% 50%);
     clip-path: circle(50% at 50% 50%);
 }
@@ -144,7 +136,8 @@ h1, h2, h3, h4 {
 .n-grid > .area-3 > article > :nth-child(1), 
 .n-grid > .area-3 > article > :nth-child(2), 
 .n-grid > .area-3 > article > :nth-child(3) {
-    margin: 0;
+    /*margin: 0;*/
+    margin: 0em 0em 0em 2em!important;
 }
 .n-grid > .area-3 > article > :nth-child(1) {
     color: var(--n-color-dos-uno);
@@ -159,33 +152,89 @@ h1, h2, h3, h4 {
     color: var(--n-color-tres);
     font-size: 0.70em;
 }
-
-
-
-
-
-
-
-
-
-
-
-/*.area-3 > img.slide-1,
+/*
+    Diapositiva
+*/
+.iconos {
+    position: absolute;
+    top: 56em;
+    left: 7em;
+    /*z-index: 4;*/
+}
+.icono {
+    position: relative;
+/*    top: 50em;
+    left: 10em;*/
+    z-index: 4;
+    color: var(--n-color-dos-uno);
+    font-size: 7em;
+}
+.formas, 
+.icono {
+    display: none;
+}
+/*.mySlides > img {vertical-align: middle;}*/    
+.area-3 > img.slide-1,
 .area-3 > img.slide-2,
-.area-3 > img.slide-3 {
+.area-3 > img.slide-3,
+.area-3 > img.slide-4,
+.area-3 > img.slide-5,
+.area-3 > img.slide-6,
+.area-3 > img.slide-7,
+.area-3 > img.slide-8,
+.area-3 > img.slide-9,
+.area-3 > img.slide-10 {
+    position: relative;
+    z-index: 0;
     float: left;
-    width: 200px;
-    height: 200px;
+    width: 250px;
+    height: 250px;
+    /*margin-right: 2em;*/
+    /*opacity: 0.5;*/
+    filter: grayscale(100%);
 }
 .area-3 > img.slide-1 {
-    shape-outside: url(i_svg/blob-haikei-1.svg);
-    clip-path: url(i_svg/blob-haikei-1.svg);
+    shape-outside: url(i_img/i/blob-1.png);
+    clip-path: url(i_img/i/blob-1.png);
 }
 .area-3 > img.slide-2 {
-    shape-outside: url(i_svg/blob-haikei-2.svg);
-    clip-path: url(i_svg/blob-haikei-2.svg);
+    shape-outside: url(i_img/i/blob-2.png);
+    clip-path: url(i_img/i/blob-2.png);
 }
 .area-3 > img.slide-3 {
-    shape-outside: url(i_svg/blob-haikei-3.svg);
-    clip-path: url(i_svg/blob-haikei-3.svg);
-}*/
+    shape-outside: url(i_img/i/blob-3.png);
+    clip-path: url(i_img/i/blob-3.png);
+}
+.area-3 > img.slide-4 {
+    shape-outside: url(i_img/i/blob-4.png);
+    clip-path: url(i_img/i/blob-4.png);
+}
+.area-3 > img.slide-5 {
+    shape-outside: url(i_img/i/blob-5.png);
+    clip-path: url(i_img/i/blob-5.png);
+}
+.area-3 > img.slide-6 {
+    shape-outside: url(i_img/i/blob-6.png);
+    clip-path: url(i_img/i/blob-6.png);
+}
+.area-3 > img.slide-7 {
+    shape-outside: url(i_img/i/blob-7.png);
+    clip-path: url(i_img/i/blob-7.png);
+}
+.area-3 > img.slide-8 {
+    shape-outside: url(i_img/i/blob-8.png);
+    clip-path: url(i_img/i/blob-8.png);
+}
+.area-3 > img.slide-9 {
+    shape-outside: url(i_img/i/blob-9.png);
+    clip-path: url(i_img/i/blob-9.png);
+}
+.area-3 > img.slide-10 {
+    shape-outside: url(i_img/i/blob-10.png);
+    clip-path: url(i_img/i/blob-10.png);
+}
+
+
+
+
+
