--- a/i_css/index.css
+++ b/i_css/index.css
@@ -1,4 +1,4 @@
- @import url("http://localhost/AllInOne/i_css/root.css");
+@import url("http://localhost/AllInOne/i_css/root.css");
 /* 
     Created on : 5 may. 2021, 7:00:03 p. m.
     Author     : neury-dev
@@ -8,7 +8,7 @@
 */
 .n-grid {
     display: grid;
-    grid-template-columns: auto auto auto;
+    grid-template-columns: 25% 25% 25% auto;
     grid-gap: 10px;
     /*background-color: #2196F3;*/
     padding: 10px;
@@ -19,11 +19,11 @@
     padding: 2em;
     /*font-size: 30px;*/
 }
-.area-1 { grid-area: 1 / span 3 / 2 / 4; }
-.area-2 { grid-area: 2 / span 3 / 3 / 4; }
-.area-3 { grid-area: 3 / 1 / 4 / 2; }
-.area-4 { grid-area: 3 / 2 / 4 / span 2; }
-.area-5 { grid-area: 4 / span 3 / 5 / 4; }
+.n-grid > .area-1 { grid-area: 1 / span 4 / 2 / 5; }
+.n-grid > .area-2 { grid-area: 2 / span 4 / 3 / 5; }
+.n-grid > .area-3 { grid-area: 3 / span 2 / 4 / 3; }
+.n-grid > .area-4 { grid-area: 3 / span 2 / 4 / 5; }
+.n-grid > .area-5 { grid-area: 4 / span 4 / 5 / 5; }
 /*
     ........................
 */
@@ -227,88 +227,80 @@ h1, h2, h3, h4 {
     shape-outside: url(i_img/i/blob-10.png);
     clip-path: url(i_img/i/blob-10.png);
 }
-
-
-
 /*
-
-    Aside
-
-
-    SVG................................................................................
-
-
-
-
+    Aside.......................................................................
 */
-aside {
-    background-image: url(i_img/i/blob-1.php);
-    background-size: 100%, 100%;
-    background-repeat:no-repeat;
+.n-grid > .area-4 {
+    margin-top: 4em;
 }
-
-
-rect#rect10 {
-    opacity:1;
-    vector-effect:none;
-    fill:#c57885;
-    fill-opacity:1;
-    fill-rule:evenodd;
-    stroke:#000000;
-    stroke-width:5.29513884;
-    stroke-linecap:butt;
-    stroke-linejoin:miter;
-    stroke-miterlimit:4;
-    stroke-dasharray:none;
-    stroke-dashoffset:0;
-    stroke-opacity:1;
+.n-grid > .area-4 > div.aside-img {
+    position: absolute;
 }
-rect#rect10:hover {
-    opacity:1;
-    vector-effect:none;
+.n-grid > .area-4 > aside {
+    width: 100%;
+    height: 450px;
+    /*background-color: var(--n-color-tres-uno);*/
+    /*border: 0.10em solid var(--n-color-dos);*/
+    /*border-radius: var(--n-radio);*/
+}
+.n-grid > .area-4 > aside > p {
+    position: absolute;
+    z-index: 1;
+    color: var(--n-color-tres);
+    font-family: var(--n-fuente);
+    font-size: 2em;
+    /*text-align: center;*/
+    transform: translate(3em, 5em);
+    /*text-decoration: overline;*/
+    text-decoration: underline;
+}
+.n-grid > .area-4 > aside > p > span {
+    /*color: var(--n-color-tres);*/
+    /*font-family: var(--n-fuente);*/
+    /*font-size: 4em;*/
+    /*text-shadow;: var(--n-sombra-dos);*/
+    opacity: 0.1;
+    cursor: cell;
+}
+svg#izquierda {
+    position: absolute;
+    z-index: 0;
+    /*background-color: #c7beb8;*/
+    transform: translate(4.50em, 11em);
+
+}
+svg#derecha {
+    position: absolute;
+    z-index: 0;
+    /*background-color: #c7beb8;*/
+    transform: translate(29em, 11.50em);
+}
+svg > text.n-hacer {
+    /*display: none;*/
     fill: var(--n-color);
-    fill-opacity:1;
-    fill-rule:evenodd;
-    stroke: var(--n-color-dos);
-    stroke-width:5.29513884;
-    stroke-linecap:butt;
-    stroke-linejoin:miter;
-    stroke-miterlimit:4;
-    stroke-opacity:1;
-    /*stroke-dashoffset: 1000;*/
-    stroke-dasharray: 1000;
-    animation-name: nHoverStroke;
-    animation-duration: 5s;
+    font-family: Verdana;
+    font-size: 2em;
+}
+aside:hover svg > text.n-hacer { 
+    display: block;
+    fill: var(--n-color);
+    stroke: var(--n-color-dos-uno);
+    transition: all 2.8s ease-in-out;
+    animation-name:quieres;
+    animation-duration: 3s;
     animation-timing-function: ease-in-out;
 }
-@keyframes nHoverStroke {
+@keyframes quieres {
     from {
+        /*transform: translateX(10em);*/
         stroke-dashoffset: 1000;
+        stroke-dasharray: 1000;
+        fill: var(--n-color-tres-uno);
     }
     to {
+        /*transform: translateX(0em);*/
         stroke-dashoffset: 0;
+        stroke-dasharray: 0;
+/*        fill: var(--n-color-tres-uno);*/
     }
-}
-
-
-
-path#path815 {
-    fill:none;
-    stroke:#ff0000;
-    stroke-width:1.465;
-    stroke-linecap:butt;
-    stroke-linejoin:miter;
-    stroke-opacity:1;
-    stroke-miterlimit:4;
-    stroke-dasharray:none;
-}
-path#path815:hover {
-    fill:none;
-    stroke: #000000;
-    stroke-width:4.465;
-    stroke-linecap:butt;
-    stroke-linejoin:miter;
-    stroke-opacity:1;
-    stroke-miterlimit:4;
-    stroke-dasharray: 1000;
 }
